--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Calculator</string>
     <string name="result">Result</string>
     <string name="string">строка: </string>
+    <string name="exit">выход</string>
 </resources>
