--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="result">Result</string>
     <string name="string">строка: </string>
     <string name="exit">выход</string>
+    <string name="calculator">Калькулятор</string>
 </resources>
